# backend/src/api/pdf-claim-extractor/dto/extracted-claim-types.dto.ts
@@ -1,4 +1,5 @@
 import { ApiProperty } from '@nestjs/swagger';
+import { IsArray, IsOptional } from 'class-validator';
 
 export class ClaimTypeBenefitDto {
   @ApiProperty()
@@ -14,4 +15,17 @@ export class ExtractedClaimTypesDto {
 
   @ApiProperty({ type: () => [ClaimTypeBenefitDto] })
   claimTypes!: ClaimTypeBenefitDto[];
+}
+
+export class ExtractClaimDto {
+  @ApiProperty({
+    type: 'string',
+    format: 'binary',
+    isArray: true,
+    required: false,
+    description: 'Documents to upload',
+  })
+  @IsOptional()
+  @IsArray()
+  file?: Express.Multer.File[];
 }
